--- a/src/app/components/change-password/change-password.component.html
+++ b/src/app/components/change-password/change-password.component.html
@@ -8,19 +8,20 @@
                     <h3 class="panel-title" style="margin-bottom: 30px;;">Şifre Güncelleme</h3>
                 </div>
                 <div class="panel-body">
-                    <form accept-charset="UTF-8" role="form">
-                        <fieldset>
+                    <form [formGroup]="changePasswordForm" accept-charset="UTF-8" role="form">
+                        <fieldset >
+                            
                             <div class="form-group">
                                 <label class="form-label">Yeni Şifre</label>
-                                <input class="form-control" placeholder="Yeni Şifre" name="password" type="password">
+                                <input formControlName="password" class="form-control" placeholder="Yeni Şifre" name="password" type="password">
                             </div>
                             <div class="form-group">
                                 <label class="form-label">Yeni Şifre Tekrar Giriniz</label>
-                                <input class="form-control" placeholder="Yeni Şifre Tekrar" name="passwordconfirm" type="password" value="">
+                                <input formControlName="passwordConfirm" class="form-control" placeholder="Yeni Şifre Tekrar" name="passwordConfirm" type="password" value="">
                             </div>
 
-                            <input style="margin-top: 10px; background-color: #6f42c1e3; border-color: #141516;"
-                                class="btn btn-lg btn-success btn-block" type="submit" value="Güncelle">
+                            <input (click)="changePassword()" style="margin-top: 10px; background-color: #6f42c1e3; border-color: #141516;"
+                                class="btn btn-lg btn-success btn-block" type="submit" value="Şifreyi Değiştir">
                         </fieldset>
                     </form>
                 </div>
