--- a/src/app/components/user-profile/user-profile.component.html
+++ b/src/app/components/user-profile/user-profile.component.html
@@ -8,22 +8,22 @@
                     <h3 class="panel-title" style="margin-bottom: 30px;;">Profilim</h3>
                 </div>
                 <div class="panel-body">
-                    <form accept-charset="UTF-8" role="form">
+                    <form [formGroup]="UserForm"accept-charset="UTF-8" role="form">
                         <fieldset>
                             <div class="form-group">
                                 <label class="form-label">İsim</label>
-                                <input class="form-control" placeholder="İsim" name="firstName" type="text">
+                                <input formControlName="firstName" class="form-control" placeholder="İsim" name="firstName" type="text">
                             </div>
                             <div class="form-group">
                                 <label class="form-label">Soyisim</label>
-                                <input class="form-control" placeholder="Soyisim" name="lastName" type="text" value="">
+                                <input formControlName="lastName" class="form-control" placeholder="Soyisim" name="lastName" type="text" value="">
                             </div>
                             <div class="form-group">
                                 <label class="form-label">Email</label>
-                                <input class="form-control" placeholder="Email" name="Email" type="text" value="">
+                                <input formControlName="email" class="form-control" placeholder="email" name="Email" type="text" value="">
                             </div>
 
-                            <input style="margin-top: 10px; background-color: #6f42c1e3; border-color: #141516;"
+                            <input (click)="updateUser()" style="margin-top: 10px; background-color: #6f42c1e3; border-color: #141516;"
                                 class="btn btn-lg btn-success btn-block" type="submit" value="Güncelle">
                         </fieldset>
                     </form>
