--- a/src/app/components/car/car-detail/car-detail.component.html
+++ b/src/app/components/car/car-detail/car-detail.component.html
@@ -1,24 +1,18 @@
 
 
 
-  
- <!--MDB Tables-->
- <div class="container mt-5">  
+<!--MDB Tables-->
+<div class="container mt-5">  
   <div class="card mb-3" style="background-color: #d3cfda69;" >
       <div class="row g-0">
         <div class="col-md-6">
           <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-              <div class="carousel-inner" *ngIf="carDetail !=null">
+              <div class="carousel-inner" *ngIf="carDetail != null">
                   <div  *ngFor="let carImage of carDetail.carImagesPaths" [class.active]="carDetail.carImagesPaths[0]==carImage" class="carousel-item">
-                      <img style="height: 350px;object-fit: cover;" src="https://localhost:44348/Images/{{carImage}}" class="d-block w-100 mx-auto img-thumbnail" 
-                      alt="...">
+                      <img style="height: 350px;object-fit: cover;" src="https://localhost:44348/Images/{{carImage}}" class="d-block w-100 mx-auto img-thumbnail" alt="...">
                     </div>
-                    
-              </div>
 
-              
-                  
-            </div>
+              </div>
               <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="sr-only">Previous</span>
@@ -37,7 +31,6 @@
             <p class="card-text">{{carDetail.description}}</p>
             <span class="card-text font-bold text-secondary h6"> Model Yılı : </span>  <span 
             class="card-text text-secondary h6"> {{carDetail.modelYear}} </span>
-
             <p class="card-text"><small class="text-muted">{{carDetail.colorName}}</small></p>
             
             <button *ngIf="loggedIn()" data-toggle="modal" data-target="#exampleModal" type="button"
