--- a/src/app/components/car/car.component.html
+++ b/src/app/components/car/car.component.html
@@ -1,74 +1,83 @@
-
-
-
-
 <!--MDB Tables-->
 <div class="container mt-5">
-
-
   <div class="card mb-4">
-      <div class="card-body" style="background-color: #d7c4f640;">
-          <!-- Grid row -->
-          <div class="row">
-              <!-- Grid column -->
-              <div class="col-md-12">
-                <div style="display: inline-block;width: 100%;">
-                  <h2 class="pt-3 pb-4  font-bold font-up deep-purple-text" style="display: inline-block;">Araçlar</h2>
-                  <button routerLink="add" style="margin: 20px 0px;" type="button" class="btn btn-dark pull-right"> <i class="fa fa-plus"
-                      aria-hidden="true"></i>
-                    Yeni Ekle</button>
-      
-      
-                </div>
-
-                  <div class="input-group md-form form-sm form-2 pl-0">
-                      <input class="form-control my-0 py-1 pl-3 purple-border" type="text" [(ngModel)]="filterText" id="filterText" placeholder="Araç giriniz.." aria-label="Search">
-                     
-                  </div>
-              </div>
-              <!-- Grid column -->
+    <div class="card-body" style="background-color: #d7c4f640;">
+      <!-- Grid row -->
+      <div class="row">
+        <!-- Grid column -->
+        <div class="col-md-12">
+          <div style="display: inline-block;width: 100%;">
+            <h2 class="pt-3 pb-4  font-bold font-up deep-purple-text" style="display: inline-block;">Araçlar</h2>
+            <button routerLink="add" style="margin: 20px 0px;" type="button" class="btn btn-dark pull-right"> <i
+                class="fa fa-plus" aria-hidden="true"></i>
+              Yeni Ekle</button>
           </div>
-          <!-- Grid row -->
-          <!--Table-->
-          <table class="table table-striped">
-            
-            <thead>
-              <tr>
-                <th >#</th>
-                <th >Araç</th>
-                <th >Marka</th>
-                <th >Renk</th>
-                <th >Yıl</th>
-                <th >Günlük Fiyat</th>
-                <th >Açıklama</th>
-                <th></th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr *ngFor="let car of cars | carFilterPipe:filterText">
-                <th scope="row">{{car.carId}}</th>
-                <td>{{car.carName}}</td>
-                <td>{{car.brandName}}</td>
-                <td>{{car.colorName}}</td>
-                <td>{{car.modelYear}}</td>
-                <td>{{car.dailyPrice}}</td>
-                <td>{{car.description}}</td>
-               <td style= "width:250px">
-                  <button type="button" routerLink="/cars/detail/{{car.carId}}" class="btn btn-outline-secondary"><i class="fa fa-eye" aria-hidden="true"></i>
-                     Detaylar</button>
-                     <button routerLink="update/{{car.carId}}" style="margin-left: 12px;" type="button" class="btn btn-dark"><i
-                      class="fa fa-pencil-square-o" aria-hidden="true"></i> Güncelle</button></td>
-                     
-              </tr>
-            </tbody>
-          </table>
-          <!--Table-->
+          <div class="input-group md-form form-sm form-2 pl-0">
+            <input class="form-control my-0 py-1 pl-3 purple-border" type="text" [(ngModel)]="filterText"
+              id="filterText" placeholder="Araç giriniz.." aria-label="Search">
+          </div>
+          <div style="margin-top: 10px; margin-bottom: 10px;" class="input-group md-form form-sm form-2 pl-0">
+            <div style="width: 100%;" class="form-inline">
+              <div class="form-group mb-2" style="width: 40%;">
+                <select [(ngModel)]="selectedBrand" class="form-control" style="width: 100%;">
+                  <option value="0"> Hepsi</option>
+                  <option *ngFor="let brand of brands" [ngValue]="brand.brandId">
+                    {{brand.brandName}}
+                  </option>
+                </select>
+
+              </div>
+              <div class="form-group mx-sm-3 mb-2" style="width: 40%;">
+                <select [(ngModel)]="selectedColor"  class="form-control" style="width: 100%;">
+                  <option value="0">Hepsi</option>
+                  <option *ngFor="let color of colors" [ngValue]="color.colorId">
+                    {{color.colorName}}
+                  </option>
+                </select>
+              </div>
+              <button (click)="filterCars()" type="button" style="width: 17%;" class="btn btn-primary mb-2">Filtrele</button>
+             
+            </div>
+          </div>
+        </div>
+        <!-- Grid column -->
       </div>
+      <!-- Grid row -->
+      <!--Table-->
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <th>#</th>
+            <th>Araç</th>
+            <th>Marka</th>
+            <th>Renk</th>
+            <th>Yıl</th>
+            <th>Günlük Fiyat</th>
+            <th>Açıklama</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let car of filteredCars | carFilterPipe:filterText">
+            <th scope="row">{{car.carId}}</th>
+            <td>{{car.carName}}</td>
+            <td>{{car.brandName}}</td>
+            <td>{{car.colorName}}</td>
+            <td>{{car.modelYear}}</td>
+            <td>{{car.dailyPrice}}</td>
+            <td>{{car.description}}</td>
+            <td style="width:250px">
+              <button type="button" routerLink="/cars/detail/{{car.carId}}" class="btn btn-outline-secondary"><i
+                  class="fa fa-eye" aria-hidden="true"></i>
+                Detaylar</button>
+              <button routerLink="update/{{car.carId}}" style="margin-left: 12px;" type="button" class="btn btn-dark"><i
+                  class="fa fa-pencil-square-o" aria-hidden="true"></i> Güncelle</button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <!--Table-->
+    </div>
   </div>
-
-
 </div>
 <!--MDB Tables-->
-
-
-
