--- a/src/app/components/payment/payment.component.html
+++ b/src/app/components/payment/payment.component.html
@@ -49,12 +49,12 @@
                        </div>
                         <div class="panel-body">
                             <ol class="list-group list-group-numbered">
-                                <li class="list-group-item d-flex justify-content-between align-items-start">
+                                <li *ngFor="let card of userCreditCards" class="list-group-item d-flex justify-content-between align-items-start">
                                   <div class="ms-2 me-auto">
-                                    <div class="fw-bold">1234567891011121</div>
-                                   merve karahan
+                                    <div class="fw-bold">{{card.cardNumber}}</div>
+                                    {{card.cardHolderName}}
                                   </div>
-                                  <button style="margin-top: 9px;" type="button" class="btn btn-dark btn-sm">Seç</button>
+                                  <button (click)="loadCard(card)" style="margin-top: 9px;" type="button" class="btn btn-dark btn-sm">Seç</button>
                                 </li>                                
                               </ol>
 
